Fixed some dark mode styling Made effects able to auto decrease on turn start

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -96,10 +96,29 @@
 
    .prosemirror {
       .editor-menu {
+         --color-text-dark-primary: #191813;
          button:not(.pm-dropdown) {
+            &:not(.active) {
+               color: rgba(255, 255, 255, 0.83);
+            }
+            &.active {
+               --color-text-dark-primary: #191813;
+               color: var(--color-text-dark-primary);
+            }
+            &:hover {
+               --color-text-dark-primary: #191813;
+               color: var(--color-text-dark-primary);
+            }
+         }
+      }
+
+      &.editing-source {
+         textarea {
             color: rgba(255, 255, 255, 0.83);
          }
       }
+
+      --color-hover-bg: rgb(255, 233, 174);
    }
 
    h1,
